<resources>
    <string name="app_name">Расписание МАНО "ЛДЦ"</string>

    <string name="refresh_button">Refresh</string>
    <string name="options_button">Options</string>
    <string name="pref_home_button">Home</string>
    <string name="pref_done_button">Done</string>
    <string name="check_connection">Проверьте настройки сети</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="cab_col">Каб</string>
    <string name="doc_name_col">Врач</string>
    <string name="post_col">Специальность</string>
    <string name="mon_col">Пн.</string>
    <string name="tue_col">Вт.</string>
    <string name="wed_col">Ср.</string>
    <string name="thu_col">Чт.</string>
    <string name="fri_col">Пт.</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="pref_header_general">Внешний вид</string>
    <string name="pref_header_data_sync">Синхронизация данных</string>

    <string name="pref_title_sync_frequency">Частота синхронизации</string>
    <string name="pref_sync_frequency_key">sync_frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>1 минута</item>
        <item>15 минут</item>
        <item>30 минут</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>1</item>
        <item>15</item>
        <item>30</item>
    </string-array>
    <string name="pref_server_address">Адрес сервера</string>
    <string name="pref_server_address_key">server_address</string>
    <string name="pref_default_server_address">192.168.0.9</string>
    <string name="pref_base_name">Имя БД</string>
    <string name="pref_base_name_key">base_name</string>
    <string name="pref_default_base_name">mano</string>
    <string name="pref_user_name">Имя пользователя</string>
    <string name="pref_user_name_key">user_name</string>
    <string name="pref_default_user_name">valera</string>
    <string name="pref_password">Пароль</string>
    <string name="pref_password_key">password</string>
    <string name="pref_default_password">valerap</string>
    <string name="pref_screen_ids">Номер экрана</string>
    <string name="pref_screen_ids_key">screen_id</string>
    <string-array name="pref_screen_ids_titles">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="pref_screen_ids_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string name="pref_row_color_picker">Цвет строки таблицы расписания</string>
    <string name="pref_row_color_picker_key">schedule_row_color</string>

    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="sync_img_descr">Data is syncing</string>

</resources>
