<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="@string/pref_sync_frequency_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency" />

    <EditTextPreference
        android:title="@string/pref_server_address"
        android:key="@string/pref_server_address_key"
        android:defaultValue="@string/pref_default_server_address"/>

    <EditTextPreference
        android:title="@string/pref_base_name"
        android:key="@string/pref_base_name_key"
        android:defaultValue="@string/pref_default_base_name"/>

    <EditTextPreference
        android:title="@string/pref_user_name"
        android:key="@string/pref_user_name_key"
        android:defaultValue="@string/pref_default_user_name"/>

    <EditTextPreference
        android:title="@string/pref_password"
        android:key="@string/pref_password_key"
        android:defaultValue="@string/pref_default_password"/>

    <ListPreference
        android:entries="@array/pref_screen_ids_titles"
        android:entryValues="@array/pref_screen_ids_values"
        android:key="@string/pref_screen_ids_key"
        android:title="@string/pref_screen_ids"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

</PreferenceScreen>
