<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:showDividers="middle"
    android:focusableInTouchMode="false">

    <TextView
        android:id="@+id/tvDoc"
        style="@style/schedLargeTvNameVertStyle"
        android:layout_height="wrap_content"
        android:background="@color/doc_color"
        tools:style="@style/schedLargeTvStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            style="@style/schedTvDayNameStyle"
            android:layout_weight="1"
            android:background="@color/day_name_color"
            android:text="@string/mon_col" />

        <TextView
            style="@style/schedTvDayNameStyle"
            android:layout_weight="1"
            android:text="@string/tue_col" />

        <TextView
            style="@style/schedTvDayNameStyle"
            android:layout_weight="1"
            android:text="@string/wed_col" />

        <TextView
            style="@style/schedTvDayNameStyle"
            android:layout_weight="1"
            android:text="@string/thu_col" />

        <TextView
            style="@style/schedTvDayNameStyle"
            android:layout_weight="1"
            android:text="@string/fri_col" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvMon"
            style="@style/schedLargeTvWhStyle"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvTue"
            style="@style/schedLargeTvWhStyle"
            android:layout_width="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvWed"
            style="@style/schedLargeTvWhStyle"
            android:layout_width="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvThu"
            style="@style/schedLargeTvWhStyle"
            android:layout_width="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvFri"
            style="@style/schedLargeTvWhStyle"
            android:layout_width="0dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvMonEnd"
            style="@style/schedLargeTvWhStyle"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvTueEnd"
            style="@style/schedLargeTvWhStyle"
            android:layout_width="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvWedEnd"
            style="@style/schedLargeTvWhStyle"
            android:layout_width="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvThuEnd"
            style="@style/schedLargeTvWhStyle"
            android:layout_width="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvFriEnd"
            style="@style/schedLargeTvWhStyle"
            android:layout_width="0dp"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>